prometheus/p-prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: prometheus.getarjati.xyz
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: prometheus-service
            port: 
              number: 8080
